--- a/college.html
+++ b/college.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+   <title>Nehru Arts and Science College Kanhangad</title>
+</head>
+<body>style="width:70%;margin:auto;background-colour:white"/>
+<centre>
+   <h1>Nehru Arts and Science College Kanhangad</h1>
+</centre>
+<centre>
+   <img style="width:70%;border:1px solid black"/>
+</centre>
+<centre>
+   <h2 style="text align:centre">About us</h2>
+</centre>
+<centre>
+<p> style="border:1px solid;colour:white;background-colour:black">
+Early in 1964,the enlightened public of Kanhangad and Nilehswar resolved to honour the memory of Jawaharlal Nehru,the architect of modern India by undertaking educational and  cultural activities in this educationaly backward area.In pursuit of this idea,a dedicated and learned team setup in 1966,an educational society known as the Nehru Memorial Educational society under the distinguished presidentship of the Shri.C.K Nair following which the society was duly registered.The establishment of Nehru Arts and Science College,Kanhangad in this backward coastal tract was the major task the society had set before themselves and subsequently acomplished it.
+</p>
+</centre>
+<h3>Programme offered</h3>
+<ul>
+   <li>B.Sc Mathematics</li>
+   <li>B.Sc Statitics</li>
+   <li>B.Sc Physics</li>
+   <li>B.A History</li>
+</ul>
+<h3>Class Timing</h3>
+<ol type="I">
+   
+</ol>
+</html>
